# aws-iot-device-sdk-embedded-C

./: CMakeLists.txt
